--- a/n/ne/new/newspaper.li.html
+++ b/n/ne/new/newspaper.li.html
@@ -1,15 +1,10 @@
-<!--The following is the downloaded HTML source of the newspaper.li privacy policy that was archived on 2013-08-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130805205701id_/http%3A//newspaper.li/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the newspaper.li privacy policy that was archived on 2014-02-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140221211004id_/http%3A//newspaper.li/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
-<script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script async="" src="//ajax.cloudflare.com/cdn-cgi/nexp/abv=3609848800/cloudflare.min.js"></script><script type="text/javascript">
+<script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script async="" src="//ajax.cloudflare.com/cdn-cgi/nexp/dok8v=221574e73d/cloudflare.min.js"></script><script type="text/javascript">
 //<![CDATA[
-window.__CF=window.__CF||{};window.__CF.AJS={"ga_key":{"ua":"UA-24870242-4","ga_bs":"2"}};
-//]]>
-</script>
-<script type="text/javascript">
-//<![CDATA[
-try{if (!window.CloudFlare) { var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",mirage:{responsive:0,lazy:0},mirage2:0,oracle:"b1/6de211b2a46afb33c1d1270a5757e4",paths:{cloudflare:"/cdn-cgi/nexp/abv=2706741234/"},atok:"0232290c151c07514c4f05eba2600303",zone:"newspaper.li",rocket:"0",apps:{"ga_key":{"ua":"UA-24870242-4","ga_bs":"2"}}}];var a=document.createElement("script"),b=document.getElementsByTagName("script")[0];a.async=!0;a.src="//ajax.cloudflare.com/cdn-cgi/nexp/abv=3609848800/cloudflare.min.js";b.parentNode.insertBefore(a,b);}}catch(e){};
+try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",bag2:1,mirage2:0,oracle:0,paths:{cloudflare:"/cdn-cgi/nexp/dok8v=02fcfa4f56/"},atok:"55275bf458a528a5ba0aa606dbe47c29",petok:"2add13ba8f0a7d2f70c940858fd74309a901636c-1393017004-1800",zone:"newspaper.li",rocket:"0",apps:{"ga_key":{"ua":"UA-24870242-4","ga_bs":"2"}}}];var a=document.createElement("script"),b=document.getElementsByTagName("script")[0];a.async=!0;a.src="//ajax.cloudflare.com/cdn-cgi/nexp/dok8v=221574e73d/cloudflare.min.js";b.parentNode.insertBefore(a,b);}}catch(e){};
 //]]>
 </script>
 <script type="text/javascript">if (window != top) top.location = self.location</script>
