--- a/p/po/pos/postmates.com.html
+++ b/p/po/pos/postmates.com.html
@@ -1,9 +1,9 @@
-<!--The following is the downloaded HTML source of the postmates.com privacy policy that was archived on 2013-11-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131106123938id_/http%3A//postmates.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the postmates.com privacy policy that was archived on 2014-02-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140222083031id_/http%3A//postmates.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">var NREUMQ=NREUMQ||[];NREUMQ.push(["mark","firstbyte",new Date().getTime()]);</script>
     <meta charset="utf-8">
-    <meta name="csrf-token" content="MxOzUze4HyLrhKzhiDQ3YGAHvPSngMcp">
+    <meta name="csrf-token" content="SweEOpvrlgOX4fP7iZTw07M2VjCvOfC9">
     <title>Privacy Policy - Postmates</title>
     <meta name="description" content="Postmates respects your privacy.">
     <meta name="keywords" content="delivery, postmates, get it now, bastian lehmann, courier, urban logistics, startup hiring, take-out, local delivery, grocery delivery">
@@ -37,9 +37,9 @@
           </div>
           <nav>
               <ul>
-                  <li><a href="/app" title="App">App</a></li>
-                  <li><a href="/testimonials" title="Testimonials">Testimonials</a></li>
-                  <li><a href="http://blog.postmates.com" title="Blog" target="_blank">Blog</a></li>
+                  <li><a href="/app" title="iOS App">iOS</a></li>
+                  <li><a href="/android" title="Android App">Android</a>
+                  </li><li><a href="http://blog.postmates.com" title="Blog" target="_blank">Blog</a></li>
               </ul>
           </nav>
       </header>
@@ -112,10 +112,11 @@
           <div class="logo">
               <a href="/" title="Home"></a>
           </div>
-          <p>© 2013 Postmates Inc.</p>
+          <p>© 2014 Postmates Inc.</p>
           <ul>
-              <li><a href="/app" title="App">App</a></li>
-              <li><a href="/about" title="About Postmates">About</a></li>
+              <li><a href="/app" title="iOS App">iOS</a></li>
+              <li><a href="/android" title="Android App">Android</a>
+              </li><li><a href="/about" title="About Postmates">About</a></li>
               <li><a href="/apply" title="Apply as a Courier">Couriers</a></li>
               <li><a href="/testimonials" title="Testimonials">Testimonials</a></li>
               <li><a href="/jobs" title="Jobs">Jobs</a></li>
