--- a/v/ve/vec/vector.sl.html
+++ b/v/ve/vec/vector.sl.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the vector.sl privacy policy that was archived on 2013-12-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131207041659id_/http%3A//vector.sl/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the vector.sl privacy policy that was archived on 2014-02-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140222115139id_/http%3A//vector.sl/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 	<title>Success-Line</title>
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="http://vector.sl/templates/sl/jquery-min.css?v=1112">
 	<link rel="stylesheet" href="http://vector.sl/templates/sl/treeview.css?v=1112">
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-	<script type="text/javascript" async="" src="https://mc.yandex.ru/metrika/watch.js"></script><script type="text/javascript" src="http://vector.sl/templates/sl/js/history.js?redirect=true&amp;basepath=/"></script>
+	<script type="text/javascript" src="http://vector.sl/templates/sl/js/history.js?redirect=true&amp;basepath=/"></script>
 	<script type="text/javascript" src="http://vector.sl/templates/sl/js/jquery.js"></script>
 	<script type="text/javascript" src="http://vector.sl/templates/sl/js/jquery-ui.js"></script>
 	<script type="text/javascript" src="http://vector.sl/templates/sl/js/jquery.easing.js"></script>
@@ -24,7 +24,7 @@
 	<script type="text/javascript" src="http://vector.sl/templates/sl/js/jquery.formstyler.js"></script>
 	<script type="text/javascript" src="http://vector.sl/templates/sl/js/jquery.treeview.js"></script>
 	<script type="text/javascript" src="http://vector.sl/templates/sl/js/slfunction.js?v=2.002"></script>
-		<script type="text/javascript" id="ajax-script" src="?ajax=java&amp;with=doc&amp;type=b&amp;sid=52a2a141f2040"></script>	<!--[if lt IE 9]>
+		<script type="text/javascript" id="ajax-script" src="?ajax=java&amp;with=doc&amp;type=b&amp;sid=53088f8ca469b"></script>	<!--[if lt IE 9]>
 		<script src="http://vector.sl/templates/sl/js/html5.js"></script>
 	<![endif]-->
 	<!--[if lt IE 8]>
@@ -41,33 +41,6 @@
 	</style>
 </head>
 <body>
-<!-- Yandex.Metrika counter -->
-<script type="text/javascript">
-(function (d, w, c) {
-    (w[c] = w[c] || []).push(function() {
-        try {
-            w.yaCounter21050005 = new Ya.Metrika({id:21050005,
-                    webvisor:true,
-                    clickmap:true,
-                    trackLinks:true,
-                    accurateTrackBounce:true});
-        } catch(e) { }
-    });
-
-    var n = d.getElementsByTagName("script")[0],
-        s = d.createElement("script"),
-        f = function () { n.parentNode.insertBefore(s, n); };
-    s.type = "text/javascript";
-    s.async = true;
-    s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js";
-
-    if (w.opera == "[object Opera]") {
-        d.addEventListener("DOMContentLoaded", f, false);
-    } else { f(); }
-})(document, window, "yandex_metrika_callbacks");
-</script>
-<noscript><div><img src="//mc.yandex.ru/watch/21050005" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
 <div class="spinner"></div>
 <div id="main-wrapper">
 	<div class="container">
@@ -174,7 +147,7 @@
 <!--footer-->
 <footer>
 	<div class="main2">
-		<strong>© 2012—2013 <a class="ajax home" href="http://vector.sl/contact"><img src="http://vector.sl/templates/sl/img/sl.png" alt="SL MANAGEMENT OF INVESTMENTS LTD" title="Contact" width="256" height="7" id="contacts"></a> •</strong><a class="ajax" href="http://vector.sl/privacy"><strong>Privacy policy</strong></a> • <a class="ajax" href="http://vector.sl/agreement"><strong>Agreement</strong></a>
+		<strong>© 2012—2014 <a class="ajax home" href="http://vector.sl/contact"><img src="http://vector.sl/templates/sl/img/sl.png" alt="SL MANAGEMENT OF INVESTMENTS LTD" title="Contact" width="256" height="7" id="contacts"></a> •</strong><a class="ajax" href="http://vector.sl/privacy"><strong>Privacy policy</strong></a> • <a class="ajax" href="http://vector.sl/agreement"><strong>Agreement</strong></a>
 		<ul id="lang">
 			<li><a href="?lang=en"><img src="http://vector.sl/templates/sl/img/en.png"></a></li>
 			<li><a href="?lang=de"><img src="http://vector.sl/templates/sl/img/de.png"></a></li>
