--- a/a/as/ash/ashlynnbrooke.com.html
+++ b/a/as/ash/ashlynnbrooke.com.html
@@ -1,65 +1,46 @@
-<!--The following is the downloaded HTML source of the ashlynnbrooke.com privacy policy that was archived on 2013-07-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130725031137id_/http%3A//www.mrbiggz.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ashlynnbrooke.com privacy policy that was archived on 2014-02-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140222115200id_/http%3A//network.newsensations.com/privacy.htm) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
-<title>MrBiggz.com - Privacy</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<link href="biggz.css" rel="stylesheet" type="text/css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>New Sensations Network - Privacy Policy</title>
+<script language="javascript" type="text/javascript" src="/vids/js/JSON.js"></script>
+<script type="text/javascript" language="javascript" src="/vids/js/jquery-latest.js"></script>
+<script type="text/javascript" language="javascript" src="/vids/js/rating.js"></script>
+<link rel="stylesheet" type="text/css" href="vids/css/rating.css">
+<link rel="stylesheet" href="vids/css/base.css" type="text/css" charset="utf-8">
+
 </head>
 
-<body bgcolor="#D0D0D0" background="images/bg.gif" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
+<body>
 
-<table width="743" height="100%" border="0" align="center" cellpadding="0" cellspacing="0">
-  <tbody><tr>
-    <td bgcolor="#490D6C" class="mainborders">&nbsp;</td>
-    <td width="735" align="center" valign="top" bgcolor="#EAEAEA"><table width="735" border="0" cellspacing="0" cellpadding="0">
-      <tbody><tr>
-        <td><img src="images/join1.gif" width="735" height="21"></td>
-      </tr>
-      <tr>
-        <td><img src="images/join2.jpg" width="250" height="189"><img src="images/join3.jpg" width="235" height="189"><img src="images/join4.jpg" width="250" height="189"></td>
-      </tr>
-      <tr>
-        <td><img src="images/join5.gif" width="735" height="13"></td>
-      </tr>
-    </tbody></table>
-          
-      <table width="736" bgcolor="#ffffff" border="0" cellspacing="2" cellpadding="2">
-        <tbody><tr> 
-          <td align="center"> <b> <font size="2" face="Arial, Helvetica, sans-serif">:: 
-            Our Privacy Policy and Commitment to You :: </font></b> <p><font size="2" face="Arial, Helvetica, sans-serif">MRBIGGZ.COM 
-              is committed to establishing and maintaining a trusting relationship 
-              with all our customers and members. MRBIGGZ.COM takes privacy 
-              issues very seriously and is committed to complying with all applicable 
-              privacy laws. However, in order to conduct business, we must collect 
-              some important confidential and personal information from our members.</font></p>
-            <p><font size="2" face="Arial, Helvetica, sans-serif">This may raise 
-              some concern as to what we do with your personal information. You 
-              can be assured that MRBIGGZ.COM will never disclose or sell 
-              such information to any third parties, businesses or individuals 
-              unless we are compelled to do so by court order, subpoena, or other 
-              legal processes. If, as a member OF MRBIGGZ.COM, you feel we 
-              are falling short in our commitment to maintain your privacy, please 
-              contact us immediately and let us know. </font></p>
-            <p><font size="2" face="Arial, Helvetica, sans-serif">The personal 
-              and confidential information we collected will ONLY be used to advertise 
-              and promote our sites as well as special offers. You personal information 
-              will NEVER be used to receive goods or services delivered to your 
-              home or business address. If you wish to remove yourself from any 
-              future electonic mailings, please email us and your email address 
-              will be promptly removed from our database.</font></p></td>
-        </tr>
-      </tbody></table>
-      <table border="0" cellspacing="0" cellpadding="0">
-      <tbody><tr>
-        <td align="center" class="copy">All content, design &amp; intellectual properties are
-          Copyright© www.MrBiggz.com 2013.</td>
-      </tr>
-    </tbody></table>
-    <br></td>
-    <td bgcolor="#490D6C" class="mainborders">&nbsp;</td>
-  </tr>
-</tbody></table>
+
+
+
+
+        <table width="98%" border="0" cellspacing="2" cellpadding="2">
+          <tbody><tr>
+            <td><b><font size="3" face="Arial, Helvetica, sans-serif"></font></b>              <div align="center">
+                <div align="left"><strong><font face="arial">We take your privacy seriously.
+                </font></strong></div>
+
+                <p align="left"><font size="3" face="arial">Please read the following to learn more about our privacy policy and to learn more about how we treat personally identifiable information collected in connection with the products and services we offer.
+                    </font>
+
+                </p><p align="left"><font size="3" face="arial">Information Collection and Use<br>
+                This site collects personally identifiable information when you register for access to this Web site. Once you become a NewSensations.com member or customer, you are not anonymous to us.
+                </font>
+                </p><p align="left"><font size="3" face="arial"> This site automatically receives and records information from your browser including cookie information and the page you requested. This site uses this information for the following purposes: to provide heightened security and fulfill your requests for certain products and services.
+                </font>
+                </p><p align="left"> <font size="-1" face="arial">Information Sharing and Disclosure<br>
+                This site will not sell, rent, or make available your personally identifiable information to anyone.
+              </font>
+            </p></div></td>
+          </tr>
+        </tbody></table>
+      
+
+
 
 
 </body></html>
