--- a/p/pa/par/parttimeworld.com.html
+++ b/p/pa/par/parttimeworld.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the parttimeworld.com privacy policy that was archived on 2013-11-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131127124928id_/http%3A//www.parttimeworld.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the parttimeworld.com privacy policy that was archived on 2014-02-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140222170151id_/http%3A//parttimeworld.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title>Parttimeworld.net- Terms and Conditions</title>
