--- a/z/zo/zoo/zoombucks.com.html
+++ b/z/zo/zoo/zoombucks.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the zoombucks.com privacy policy that was archived on 2013-10-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131004224700id_/http%3A//www.zoombucks.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the zoombucks.com privacy policy that was archived on 2014-02-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140222192031id_/http%3A//www.zoombucks.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -125,9 +125,16 @@
         <div class="clear"></div>
         <div class="siteinfo">
           <div class="left">
-            <span>Easiest Points And Rewards Online. <a href="http://www.zoombucks.com/index.php#join"><font style="color:#b3bdcb;">Sign Up For Free</font></a></span>
+            <span style="width:1000px;">Easiest Points And Rewards Online. <a href="http://www.zoombucks.com/index.php#join"><font style="color:#b3bdcb;">Sign Up For Free</font></a>
+			<br><br>
+			Zoom Payments Limited<br>
+			15 A Street, Belize City, Belize<br><br>
+			© Copyright 2014 Zoombucks Online, Inc. <a href="http://www.zoombucks.com/terms.php"><font style="color:#b3bdcb;">Terms</font></a>
+			</span>
+			 <span style="float:right; text-align:right;">
+			
+			</span>
           </div>
-          <div class="right">© Copyright 2013 Zoombucks Online, Inc. <a href="http://www.zoombucks.com/terms.php"><font style="color:#b3bdcb;">Terms</font></a></div>
         </div>
         <div class="clear"></div>
 		      </div>
